2005-02-20  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/ProgressWindow.glade:
	* src/ProgressWindow.cs:

	Only allow horizonal resizing.
	
	* src/VolumeButton.cs:

	Replace obsolete Widget.Flags with Widget.WidgetFlags.

2005-02-18  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddWindow.cs:

	Clicking "Play" no longer closes the window, and the contents are once
	again reset when the dialog is reopened.

2005-02-17  Jorn Baayen  <jbaayen@gnome.org>

	* src/Actions.cs:

	Change shortcut of "Play" to "P" and of "Previous" to "B".

2005-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Update album name when necessary.

2005-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Depend on Gtk# 1.9.2.
	
	* src/About.cs:

	Subclass from Gnome.About.
	
	* src/Actions.cs:

	Subclass from ActionGroup, and use string index to access 
	actions.
	
	* src/PlaylistWindow.cs:

	Updated for Actions updates.
	
	* src/HandleModel.cs:

	Update to Gtk# 1.9.2 stuff.

2005-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SkipToWindow.cs:

	Kill a gtk warning.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* README:

	Updated.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	0.8.2.99 - forgot to bump version number after release.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:

	Small cleanup.
	
	* src/SkipToWindow.cs:

	Do the actual seek from a timeout, bit smoother experience using
	the GST backend.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Make GStreamer the default backend.

	* libmuine/player-gst.c:

	Use a GTimer for time reporting rather than GStreamer, and
	escape path string before passing it to gst.
	
	* libmuine/player-xine.c:

	Small cleanup.
	
	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Do the actual song loading in an idle. This makes the whole UI
	feel a lot more responsive.

2005-02-09  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* doc/en/Muine.PluginLib/IPlayer.xml: